[gd_scene load_steps=6 format=3 uid="uid://cdpbkw6pn6tnx"]

[ext_resource type="Script" uid="uid://bqduxncvt7iw0" path="res://controller/fps_camera.gd" id="1_d8b51"]
[ext_resource type="Script" uid="uid://d1imrlyfn8cta" path="res://controller/fps_controller.gd" id="1_jodw4"]

[sub_resource type="Curve" id="Curve_jodw4"]
_data = [Vector2(0, 0), 0.0, 1.4, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wfw5p"]
radius = 0.3
height = 1.6

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_d8b51"]
radius = 0.3
height = 1.0

[node name="JamesFpsController" type="CharacterBody3D"]
floor_constant_speed = true
script = ExtResource("1_jodw4")
acceleration_curve = SubResource("Curve_jodw4")
deceleration_activation_angle = 45.0
coyote_time = 0.1
jog_min_speed = 3.0
jog_max_speed = 5.0
jog_acceleration = 30.0
jog_deceleration = 50.0
sprint_min_speed = 5.0
sprint_max_speed = 10.0
sprint_acceleration = 50.0
sprint_deceleration = 60.0
jump_force = Vector3(0, 12, 0)
air_acceleration = 10.0
air_deceleration = 5.0
fall_min_speed = 10.0
fall_max_speed = 20.0
gravitational_force = 70.0

[node name="StandingCollision" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
shape = SubResource("CapsuleShape3D_wfw5p")

[node name="FPSCamera" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
script = ExtResource("1_d8b51")

[node name="CrouchingCollision" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_d8b51")
disabled = true

[node name="StandCam" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)

[node name="CrouchCam" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)

[node name="CrouchRoofCast" type="RayCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0)
enabled = false
target_position = Vector3(0, 0.8, 0)
